@@ -1,3 +1,8 @@
+2004-05-03  Han-Wen Nienhuys   <hanwen@xs4all.nl>
+
+	* scm/music-functions.scm (set-accidental-style): use GrandStaff
+	iso. PianoStaff.
+
 2004-05-02  Han-Wen Nienhuys   <hanwen@xs4all.nl>
 
 	* Documentation/user/lilypond.tely (Top): update version number.
